2008-07-06  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/udp_tcl.c: Applied patch #1838467 (marttj) to avoid a crash
	* tests/udp.test:    when exiting with an open mcast socket.

	* generic/udp_tcl.c: Applied patch #1838459 (marttj) to properly
	* tests/udp.test:    handle appending to a shared list object in 
	                     -mcastadd. Added tests.

2008-07-05  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/udp_tcl.c: Applied patch 1848365 (marttj) to accept any
	* tests/udp.test:    boolean value for -mcastloop (plus tests).

2007-04-10  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/udp_tcl.c: Applied patch 1693037 from Uwe Klein to
	enable setting the SO_REUSEADDR socket option when creating a new
	udp socket.
	Improved error reporting on Windows.

2007-03-30  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/udp_tcl.c: Added support for IP_MULTICAST_LOOP for
	Konstantin Khomoutov to control multicast loopback transmission.
	Improved the error reporting by using strerror if available.
	* Makefile.in: Fix 'make shell' to load the built library.
	* configure.in: Incremented version and use TEA 3.6
	* tclconfig/*: Upgraded to TEA 3.6
	* aclocal.m4: Check for strerror presence.

2007-01-31  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/udp_tcl.c: Turns out the HP-UX patch break buiding on
	AIX so made the check more specific (from Jeff Hobbs again).

2007-01-21  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/udp_tcl.c: Applied HP-UX patch #1639930 from tclguy.

2006-07-11  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/udp_tcl.c: Added some timing to tests and changed the
	* tests/udp-srv.tcl: service name lookup (was very slow on linux)

2006-06-20  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* TAG:      ==== tcludp-1_0_8 ====
        * RELEASE:  Released version 1.0.8

2006-06-20  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/udp_tcl.c:  Stick to ckalloc/ckfree.